* Allow to filter Recent Reviews by author - ADDED
* Fix for some UK regions being wrong from Google API - FIXED
* Create missing pages tool not working if menu item with same slug exists - FIXED
* GD > Ninja Forms Gutenberg background color issue - FIXED
* Map don't shows correct results filtered by GPS - FIXED
* Yoast taxonomies default nonindex setting not working for GD terms - FIXED

= 2.1.0.7 =
* OpenStreetMap routing add more languages support including Russian language - CHANGED
* Listing sets CPT default image instead of category default image as fallback - FIXED
* Listing generate image alt attribute when empty to prevent web accessibility issue - CHANGED
* Add missing translation for file upload field - FIXED
* Images can now store full URL for external images - ADDED
* Detail page lightbox next/previous link not working with WP v5.6 & jQuery v3.5.x for legacy style - FIXED
* Business hours show single day times with [gd_post_meta] shortcode - ADDED
* Images can now store full URL during import for external images - ADDED
* %%post_count%% shows null when no post found - CHANGED
* GD Listings pagination not working when with_pics_only enabled - FIXED
* Map marker not bouncing when OpenStreetMaps enabled with AUI Bootstrap style - FIXED
* Option added to allow to add listing outside default city - ADDED
* Clear existing map route when searched with a new route - FIXED

= 2.1.0.6 =
* Detail page image slider is not working with Divi theme - FIXED
* Default category always shows first option selected with Bootstrap style - FIXED
* Unable to translate street field default placeholder - FIXED
* Elementor custom skin loop overwrites $wp_query - FIXED
* Search form AUI does not keep padding margins when CPT select changed - FIXED
* Backend re-arrange post images order not working with AUI - FIXED
* Classifieds dummy data not using blocks when Gutenberg in use - FIXED
* Category widget now has option to align items of partial rows - ADDED